# pytest-battle

./: README.md  pyproject.toml
exercises/01_junior/: README.md
exercises/01_junior/ex01_variables/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex02_strings/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex03_lists/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex04_dictionaries/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex05_functions/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex06_control_flow/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex07_tuples/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex08_sets/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/01_junior/ex09_loops/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/: README.md
exercises/02_mid/ex01_comprehensions/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex02_classes/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex03_decorators/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex04_generators/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex05_exceptions/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex06_context_managers/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/02_mid/ex07_itertools/: HINT.md  README.md  exercise.py  test_exercise.py
exercises/03_senior/: README.md
src/pytest_battle/: __init__.py  cli.py  tui.py
(+49 files in other folders)
